--- a/release/Network.html
+++ b/release/Network.html
@@ -67,73 +67,93 @@ Our research interests revolve around following directions:<br /></p>
 <table class="imgtable"><tr><td>
 <img src="Network_img\\1.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>Relative localization: A theoretical analysis framework in terms of the constraint CRLB of EFIM is derived, and the geometry merging and geometry transforming algorithms for relative localization are designed. We further analyze the characteristics of resource allocation for relative localization, and design a corresponding resource allocation algorithm. (IEEE Transactions on Vehicular Technology, 69(10), 11756-11770. 2020)</p>
+<li><p>Relative localization: A theoretical analysis framework in terms of the constraint CRLB of EFIM is derived, and the geometry merging and geometry transforming algorithms for relative localization are designed. We further analyze the characteristics of resource allocation for relative localization, and design a corresponding resource allocation algorithm.<br /></p>
+</li>
+<li><p>Y. Liu, Y. Wang, J. Wang, and Y. Shen, &ldquo;Distributed 3D relative localization of UAVs,&rdquo; IEEE Trans. Veh. Technol., vol. 69, no. 10, pp. 11 756-11 770, Oct. 2020.</p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="Network_img\\2.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>Polarization-sensitive-array-based BLE localization system: We design and implement a real-time single anchor polarization-sensitive-array-based BLE localization system using angular information, which achieves a median accuracy of 30cm.</p>
+<li><p>Polarization-sensitive-array-based BLE localization system: We design and implement a real-time single anchor polarization-sensitive-array-based BLE localization system using angular information, which achieves a median accuracy of 30 cm.<br /></p>
+</li>
+<li><p>B. Wang, Y. Wang, X. Qiu, and Y. Shen, &ldquo;BLE localization with polarization sensitive array,&rdquo; IEEE Wireless Commun. Lett., pp. 1-4, 2021.</p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="Network_img\\3.jpg" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>5G positioning system based on SRS signal: We propose a three-dimensional SAGIN localization scheme for ground agents utilizing multi-source information from satellites, base stations and unmanned aerial vehicles.</p>
+<li><p>We propose a 5G cooperative localization scheme and a distributed cooperative localization algorithm based on maximum likelihood principle. Next, the proposed scheme and algorithm are implemented and simulated by using MATLAB. The superiority of the proposed scheme is verified by comparing with the theoretical limit of positioning error. Finally, we explore the factors affecting the stability of the cooperative localization technology in 5G vehicle networks, and provide ideas for the future research of localization scheme in vehicle networks.</p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="Network_img\\4.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>Network localization and synchronization using full-duplex radios: We propose NLS schemes using full-duplex radios, where internode distances and clock offsets can be estimated through only two frames of transmission. (IEEE Transactions on Signal Processing, 66(3), 714-728, (2018))</p>
+<li><p>Network localization and synchronization using full-duplex radios: We propose NLS schemes using full-duplex radios, where internode distances and clock offsets can be estimated through only two frames of transmission. <br /></p>
+</li>
+<li><p>Y. Liu, Y. Shen, D. Guo, and M. Z. Win, &ldquo;Network localization and synchronization using full-duplex radios,&rdquo; IEEE Trans. Signal Process., vol. 66, no. 3, pp. 714-728, Feb 2018.</p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="Network_img\\5.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>Beamspace direct localization: We prove that the high-dimensional array signal can be represented in a low-dimensional beamspace without information loss and further propose a robust beamspace design strategy. (IEEE Transactions on Signal Processing, 68(5), 3529-3544. (2020))</p>
+<li><p>Beamspace direct localization: We prove that the high-dimensional array signal can be represented in a low-dimensional beamspace without information loss and further propose a robust beamspace design strategy. <br /></p>
+</li>
+<li><p>H. Zhao, N. Zhang, and Y. Shen, &ldquo;Beamspace direct localization for large-scale antenna array systems,&rdquo; IEEE Trans. Signal Process., vol. 68, pp. 3529-3544, May 2020.</p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="Network_img\\6.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>Tensor-based multipath estimation: We explore the inherent structure in the measurements and the uniqueness of tensor factorization, which prevents from implementing complicated data association steps.</p>
+<li><p>Tensor-based network localization: We explore the inherent structure in the measurements and the uniqueness of tensor factorization to achieve high-accuracy network localization in multipath environments. By formulating the localization problem as a low-rank tensor decomposition problem, we develop a tensor decomposition-based direct localization algorithm using the designed beamspaces to significantly enhance the estimation accuracy with low complexity and data association-free methods.</p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="Network_img\\7.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>Joint active and passive localization framework against clock drifts: We design a network ranging method with a minimum number of signal transmissions. (International Conference on Wireless Communications and Signal Processing. (2019))</p>
+<li><p>Joint active and passive localization framework against clock drifts: We design a network ranging method with a minimum number of signal transmissions. <br /></p>
+</li>
+<li><p>Z. Zhang, H. Zhao, and Y. Shen, &ldquo;High-efficient ranging algorithms for wireless sensor network,&rdquo; in Proc. Int. Conf. on Wireless Commun. and Signal Process., Xi'an, China, Oct. 2019, pp. 1-6.</p>
+</li>
+</ul>
+</td></tr></table>
+<p><br /></p>
+<table class="imgtable"><tr><td>
+<img src="Network_img\\9.png" alt="alt text" width="400px" height="230px" />&nbsp;</td>
+<td align="left"><ul>
+<li><p>We propose a BLE single anchor localization solution, designed a real-time localizing and tracking system by combining AOA, signal strength and Kalman filter. <br /></p>
+</li>
+<li><p>X. Qiu and B. Wang and J. Wang and Y. Shen,&ldquo;AOA-based BLE localization with carrier frequency offset mitigation,&rdquo; in Proc. IEEE Int. Conf. Commun. Workshop, Dublin, Ireland, Jun. 2020, pp. 1-5.</p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="Network_img\\8.png" alt="alt text" width="400px" />&nbsp;</td>
+<img src="Network_img\\10.jpg" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>We propose a maximum likelihood estimator to jointly estimate the TDOA and the clock skews of passive anchors, and achieve 20 cm localization accuracy with only one passive anchor in NLOS environments.</p>
+<li><p>We introduce the Percolation Theory in the cooperative network localization problem, prove the existence of the critical node intensity for the localizability of large-scale network.</p>
+</li>
+<li><p>F. Yang and Y. Shen, &ldquo;Critical intensity for unbounded sequential localizability,&rdquo; IEEE/ACM Trans. Netw., 2021, Early Access.</p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="Network_img\\9.png" alt="alt text" width="400px" />&nbsp;</td>
+<img src="Network_img\\11.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>We propose a BLE single anchor localization solution, designed a real-time localizing and tracking system by combining AOA, signal strength and Kalman filter. (IEEE International Conference on Communications Workshops, (2020))</p>
+<li><p>We propose a multi-grained grid-based filter to jointly estimate the location and the heading direction of a pedestrian which can efficiently use map information and fuse  multiple measurements for indoor localization.</p>
+</li>
+<li><p>F. Ge and Y. Shen, &ldquo;Real-time indoor localization on smartphones by multi-grained grid-based filters,&rdquo; in Proc. IEEE Global Telecomm. Conf., Abu Dhabi, United Arab Emirates, Dec. 2018, pp. 1-6.</p>
 </li>
 </ul>
 </td></tr></table>
-<ul>
-<li><p>We introduce the Percolation Theory in the cooperative network localization problem, prove the existence of the critical node intensity for the localizability of large-scale networks. (2018 IEEE International Conference on Communications)</p>
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-03 22:10:35 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-03 17:29:47 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
