--- a/release/UWB.html
+++ b/release/UWB.html
@@ -63,7 +63,9 @@
 <table class="imgtable"><tr><td>
 <img src="UWB_img\\1.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>We propose a self-training learning scheme for RF environment, and design a multi-sensory information fusion localization system based on inertial sensors, map and UWB. The NLOS ranging error is reduced by more than 75% and results in 90th percentile of final localization error achieving 0.5m in a complex indoor environment.</p>
+<li><p>We propose a self-training learning scheme for RF environment, and design a multi-sensory information fusion localization system based on inertial sensors, map and UWB. The NLOS ranging error is reduced by more than 75% and results in 90th percentile of final localization error achieving 0.5m in a complex indoor environment.<br /></p>
+</li>
+<li><p>F. Ge and Y. Shen, &ldquo;Indoor Localization System with NLOS Mitigation Based on Self-Training&rdquo;, submitted to IEEE Trans. Mobile Comput.</p>
 </li>
 </ul>
 </td></tr></table>
@@ -71,7 +73,9 @@
 <table class="imgtable"><tr><td>
 <img src="UWB_img\\UWB2.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>We develop a SAL system which achieves 3D high-accuracy localization using time and wrapped phase measurements of UWB signals, and achieve decimeter-level localization accuracy in outdoor and indoor environments. (F. Ge and Y. Shen,&rsquo;'Single-Anchor Ultra-Wideband Localization System using Wrapped PDoA&rsquo;&rsquo;, submitted to IEEE Trans. Mobile Comput.)</p>
+<li><p>We develop a SAL system which achieves 3D high-accuracy localization using time and wrapped phase measurements of UWB signals, and achieve decimeter-level localization accuracy in outdoor and indoor environments.<br /></p>
+</li>
+<li><p>F. Ge and Y. Shen,&rsquo;'Single-Anchor Ultra-Wideband Localization System using Wrapped PDoA&rsquo;&rsquo;, submitted to IEEE Trans. Mobile Comput.</p>
 </li>
 </ul>
 </td></tr></table>
@@ -79,32 +83,32 @@
 <table class="imgtable"><tr><td>
 <img src="UWB_img\\UWB3.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>A single-anchor localization method that achieves high-accuracy multi-agent localization with high efficiency is proposed. The proposed method can achieve decimeter-level accuracy for multiple agents using three messages. Our method provides design guidelines for high-accuracy and high-efficiency multi-agent localization systems. （Applied Sciences 2020, 10, 57.）</p>
+<li><p>A single-anchor localization method that achieves high-accuracy multi-agent localization with high efficiency is proposed. The proposed method can achieve decimeter-level accuracy for multiple agents using three messages. Our method provides design guidelines for high-accuracy and high-efficiency multi-agent localization systems. <br /></p>
+</li>
+<li><p>T. Wang, H. Zhao, and Y. Shen, &ldquo;An efficient single-anchor localization method using ultra-wide bandwidth systems,&rdquo; Appl. Sci., vol. 10, no. 1, p. 57, Jan. 2020.</p>
 </li>
 </ul>
 </td></tr></table>
-<ul>
-<li><p>We propose a variational Bayesian domain transfer network (VBDTN) that achieves automatic semantic editing as well as efficient unsupervised translation from the source domain towards a mixture of several target domains.
-<br /></p>
-</li>
-</ul>
 <table class="imgtable"><tr><td>
 <img src="UWB_img\\UWB4.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>We propose an expectation-maximization network for the blind SISR problem, namely SREMN, which enables efficient image restoring under a more general degradation assumption in both supervised and semi-supervised manner.</p>
+<li><p>We propose a variational Bayesian domain transfer network (VBDTN) that achieves automatic semantic editing as well as efficient unsupervised translation from the source domain towards a mixture of several target domains. Meanwhile, We establish an expectation-maximization network for the blind SISR problem, namely SREMN, which enables efficient image restoring under a more general degradation assumption in both supervised and semi-supervised manner.</p>
 </li>
 </ul>
 </td></tr></table>
 <p><br /></p>
 <table class="imgtable"><tr><td>
 <img src="UWB_img\\UWB5.png" alt="alt text" width="400px" />&nbsp;</td>
-<td align="left"></td></tr></table>
-<table class="imgtable"><tr><td>
-<img src="UWB_img\\UWB6.png" alt="alt text" width="400px" />&nbsp;</td>
-<td align="left"></td></tr></table>
+<td align="left"><ul>
+<li><p>We propose a passive anchor assisted localization (PAAL) scheme, where the active anchor obtains TOA<i>AOA measurements to the agent while the passive anchors capture the signals from the active anchor and agent. The proposed method fully exploits the time-difference-of-arrival (TDOA) information from the measurements at the passive anchors to complement single-anchor joint TOA</i>AOA localization. </p>
+</li>
+<li><p>H. Lu, T. Wang, F. Ge, Y. Shen, &ldquo;Robust UWB Array Localization through Passive Anchor Assistance,&rdquo; China Commun., vol. 18, no. 4, pp. 1-13, Apr. 2021.</p>
+</li>
+</ul>
+</td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-03 22:10:35 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-03 17:29:47 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
