--- a/release/multiagent.html
+++ b/release/multiagent.html
@@ -61,40 +61,43 @@
 <table class="imgtable"><tr><td>
 <img src="multiagent_img\\1.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>Cooperative detection in mobile multi-agent networks: We propose a cooperative detection scheme for non-cooperative targets, and design a GLRT detector to realize joint position self-calibration and target detection. (IEEE Transactions on Signal Processing, 68(9), 5411-5426, (2020))</p>
+<li><p>Cooperative detection in mobile multi-agent networks: We propose a cooperative detection scheme for non-cooperative targets, and design a GLRT detector to realize joint position self-calibration and target detection. <br /></p>
+</li>
+<li><p>K. Gu, Y. Wang, and Y. Shen, &ldquo;Cooperative detection by multiagent networks in the presence of position uncertainty,&rdquo; IEEE Trans. Signal Process., vol. 68, pp. 5411-5426, Sep. 2020.</p>
 </li>
 </ul>
 </td></tr></table>
-<ul>
-<li><p>Large-scale cooperative localization: We develop a large-scale cooperative localization based on passive extended double-sided two-way ranging (PE-DSTER). Angle measurement information of UWB antenna array is further exploited for improving the positioning accuracy. 
-<br /></p>
-</li>
-</ul>
 <table class="imgtable"><tr><td>
 <img src="multiagent_img\\2.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>Joint localization and formation of multi-agent networks: We design a new index reflecting the formation performance. The formation performance when there are statistical errors in positioning and control is analyzed.</p>
+<li><p>Joint localization and formation of multi-agent networks: We design a new index reflecting the formation performance. The formation performance when there are statistical errors in positioning and control is analyzed.<br /></p>
+</li>
+<li><p>X. Li, K. Ma, J. Wang, and Y. Shen, &ldquo;An integrated design of cooperative localization and motion control,&rdquo; in Proc. IEEE Int. Conf. Commun. in China, Changchun, China, Aug. 2019, pp. 1-5.</p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="multiagent_img\\3.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>We propose a statistical framework for cooperative visual 3D perception in multi-agent networks. A metric based on statistical analysis is designed to evaluate the dependence of reconstruction quality on visual sensor deployment. The temporal and spatial cooperation for optimal sensor deployment is exploited. (IEEE Sensors Journal, Early Access, (2021)).</p>
+<li><p>We propose a statistical framework for cooperative visual 3D perception in multi-agent networks. A metric based on statistical analysis is designed to evaluate the dependence of reconstruction quality on visual sensor deployment. The temporal and spatial cooperation for optimal sensor deployment is exploited.<br /></p>
+</li>
+<li><p>Q. An, Y. Wang, and Y. Shen, &ldquo;Sensor deployment for visual 3D perception: A perspective of information gains,&rdquo; IEEE Sensors J., vol. 21, no. 6, pp. 8464-8478, Mar. 2021.</p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="multiagent_img\\4.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>We propose a new flocking algorithm with collision avoidance by constructing a novel potential function. The stability under observation and control noise is proved using Lyapunov functions. </p>
+<li><p>A new flocking algorithm with collision avoidance is proposed by constructing a novel potential function. We analyze the stability of the flocking algorithm proposed by the predecessors with Lyapunov's theory. The upper bounds of steady states are derived. Then the continuous-time system is discretized and sampled periodically and corresponding convergence results are derived according to the characteristics of digital chips.</p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="multiagent_img\\5.png" alt="alt text" width="400px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>A distributed formation algorithm based on the integrated framework of localization and control is proposed, which can achieve near-optimal accuracy (close to the fundamental limit), and has strong robustness to measurement and control noise. (IEEE Global Communications Conference (2020))</p>
+<li><p>A distributed formation algorithm based on the integrated framework of localization and control is proposed, which can achieve near-optimal accuracy (close to the fundamental limit), and has strong robustness to measurement and control noise. <br /></p>
+</li>
+<li><p>K. Ma and Y. Shen, &ldquo;Distributed formation algorithm based on integrated localization and control,&rdquo; in Proc. IEEE Global Telecomm. Conf., Taipei, China, Dec. 2020, pp. 1-5.</p>
 </li>
 </ul>
 </td></tr></table>
@@ -103,23 +106,24 @@
 <td align="left"><ul>
 <li><p>We develop a general approach to characterize the spatial information coupling effect in relative localization and present a geometric interpretation for the cooperation efficiency between two agents. </p>
 </li>
-</ul>
-</td></tr></table>
-<ul>
-<li><p>We establish a framework of intersection vehicle scheduling problem and provide an algorithm of determining decision times and making decisions with limit state information. (2020 IEEE Intelligent Transportation Systems Conference)
-<br /></p>
+<li><p>X. Shen, Y. Liu, and Y. Shen, &ldquo;On the spatial information coupling in relative localization networks,&rdquo; in Proc. IEEE Int. Conf. Commun., Montreal, Canada, Jun. 2021, pp. 1-6.</p>
 </li>
 </ul>
+</td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="multiagent_img\\7.png" alt="alt text" width="400px" height="300px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p>We provide a distributed long-horizon vehicle scheduling algorithm for traffic intersection with delayed information, provide the convergence guarantee for any finite vehicle sequence. (2020 IEEE Global Communications Conference)</p>
+<li><p>We establish a framework of intersection vehicle scheduling problem and provide an algorithm of determining decision times and making decisions with limit state information. Moreover, we provide a distributed long-horizon vehicle scheduling algorithm for traffic intersection with delayed information, provide the convergence guarantee for any finite vehicle sequence.<br /></p>
+</li>
+<li><p>F. Yang and Y. Shen, &ldquo;Distributed long-horizon vehicle scheduling for traffic intersection with delayed information,&rdquo; in Proc. IEEE Global Telecomm. Conf., Taipei, China, Dec. 2020, pp. 1-6.</p>
+</li>
+<li><p>F. Yang and Y. Shen, &ldquo;An adaptive approach for intersection vehicle scheduling with limited state information,&rdquo; in Proc. IEEE Int. Conf. Intell. Transport. Syst., Rhodes, Greece, Sep. 2020, pp. 1-6.</p>
 </li>
 </ul>
 </td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-03 22:10:35 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-03 17:29:47 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
